--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
-    "emoji-picker-react": "^4.4.10",
     "axios": "^1.4.0",
+    "emoji-picker-react": "^4.4.10",
     "react": "^18.2.0",
     "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
-    "react-input-emoji": "^5.1.1",
     "react-full-page": "^0.1.12",
+    "react-input-emoji": "^5.1.1",
+    "react-query": "^3.39.3",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
