--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "date-fns": "^2.30.0",
     "emoji-picker-react": "^4.4.10",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-full-page": "^0.1.12",
