--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
     "emoji-picker-react": "^4.4.10",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-datepicker": "^4.16.0",
@@ -22,7 +23,7 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
     "redux": "^4.2.1",
-    "styled-components": "^6.0.4",
+    "styled-components": "^6.0.5",
     "styled-reset": "^4.5.1",
     "web-vitals": "^2.1.0"
   },
